--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,8 +1,8 @@
 if(isBuildModule.toBoolean()) {
     apply plugin: 'com.android.application'
+//    apply from: 'tinker-support.gradle'
 } else {
     apply plugin: 'com.android.library'
-    apply from: 'tinker-support.gradle'
 }
 apply plugin: 'realm-android'
 apply plugin: 'AndResGuard'
@@ -71,6 +71,10 @@ android {
         exclude 'META-INF/LICENSE'
         exclude 'META-INF/LICENSE.txt'
         exclude 'META-INF/NOTICE.txt'
+    }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_7
+        targetCompatibility JavaVersion.VERSION_1_7
     }
     // 解决lint检查出错误导致打包失败的问题
     lintOptions {
@@ -162,10 +166,10 @@ dependencies {
     implementation 'com.facebook.stetho:stetho-okhttp3:1.5.0'
 
     // bugly升级SDK已经集成crash上报功能
-    implementation 'com.tencent.bugly:crashreport_upgrade:latest.release'
+    implementation 'com.tencent.bugly:crashreport_upgrade:1.3.5'
 
     // 其中latest.release指代最新Bugly NDK版本号，也可以指定明确的版本号，例如3.0
-    implementation 'com.tencent.bugly:nativecrashreport:latest.release'
+    implementation 'com.tencent.bugly:nativecrashreport:3.3.1'
 
     // 渠道打包工具
     implementation 'com.mcxiaoke.gradle:packer-helper:1.0.9'
