--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,9 @@
 apply from: 'config.gradle'
 buildscript {
     repositories {
+        google()
         jcenter()
+        mavenCentral()
         maven { url 'https://maven.fabric.io/public' }
         maven {
             url 'https://maven.google.com/'
@@ -10,12 +12,12 @@ buildscript {
         }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.1.2'
-        classpath 'io.realm:realm-gradle-plugin:5.0.0'
+        classpath 'com.android.tools.build:gradle:3.1.3'
+        classpath 'io.realm:realm-gradle-plugin:5.1.0'
         classpath 'com.tencent.mm:AndResGuard-gradle-plugin:1.2.12'
-        classpath 'com.tencent.bugly:symtabfileuploader:latest.release'
-        // tinkersupport插件, 其中lastest.release指拉取最新版本，也可以指定明确版本号，例如1.0.4
-        classpath "com.tencent.bugly:tinker-support:latest.release"
+        classpath 'com.tencent.bugly:symtabfileuploader:2.1.2'
+//        // tinkersupport插件, 其中lastest.release指拉取最新版本，也可以指定明确版本号，例如1.0.4
+//        classpath "com.tencent.bugly:tinker-support:1.1.2"
         classpath 'com.mcxiaoke.gradle:packer-ng:1.0.9'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
