--- a/app/build.gradle
+++ b/app/build.gradle
@@ -158,6 +158,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation 'androidx.annotation:annotation:1.1.0'
+    implementation "androidx.viewpager2:viewpager2:1.0.0"
 
     // dagger2
     implementation 'com.google.dagger:dagger:2.16'
