--- a/app/build.gradle
+++ b/app/build.gradle
@@ -83,6 +83,8 @@ android {
         exclude 'META-INF/LICENSE'
         exclude 'META-INF/LICENSE.txt'
         exclude 'META-INF/NOTICE.txt'
+
+        exclude "lib/arm64-v8a/librealm-jni.so"
     }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
@@ -154,7 +156,7 @@ dependencies {
     // support 兼容包
     implementation 'androidx.multidex:multidex:2.0.1'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation 'com.google.android.material:material:1.0.0'
+    implementation 'com.google.android.material:material:1.1.0'
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation 'androidx.annotation:annotation:1.1.0'
@@ -192,7 +194,7 @@ dependencies {
 
     // 渠道打包工具
     implementation 'com.mcxiaoke.gradle:packer-helper:1.0.9'
-    implementation "androidx.core:core-ktx:1.1.0"
+    implementation "androidx.core:core-ktx:1.3.0"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
     // FlingAnimation support library
     implementation "androidx.dynamicanimation:dynamicanimation-ktx:1.0.0-alpha03"
