--- a/app/build.gradle
+++ b/app/build.gradle
@@ -84,7 +84,7 @@ android {
         exclude 'META-INF/LICENSE.txt'
         exclude 'META-INF/NOTICE.txt'
 
-        exclude "lib/arm64-v8a/librealm-jni.so"
+//        exclude "lib/arm64-v8a/librealm-jni.so"
     }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
@@ -174,7 +174,7 @@ dependencies {
     testImplementation 'org.mockito:mockito-core:2.19.0'
 
     // google的protobuf运行时环境
-    implementation 'com.google.protobuf:protobuf-java:3.4.0'
+    implementation 'com.google.protobuf:protobuf-java:3.10.0'
 
     // square公司出的protobuf方案"wire"的运行时环境
     implementation 'com.squareup.wire:wire-runtime:2.2.0'
