--- a/app/build.gradle
+++ b/app/build.gradle
@@ -161,6 +161,7 @@ dependencies {
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation 'androidx.annotation:annotation:1.1.0'
     implementation "androidx.viewpager2:viewpager2:1.0.0"
+    implementation 'androidx.security:security-crypto:1.1.0-alpha01'
 
     // dagger2
     implementation 'com.google.dagger:dagger:2.16'
